whole buncha stuff

--- a/dashboards/verbinski.erb
+++ b/dashboards/verbinski.erb
@@ -1,8 +1,24 @@
-<% content_for :title do %>Verbinski: A Dashing Weather Widget<% end %>
+<% content_for :title do %>
+    308 Dashboard
+<% end %>
 <div class="gridster">
   <ul>
-    <li data-row="1" data-col="1" data-sizex="3" data-sizey="1">                
-      <div data-id="verbinski" data-view="Verbinski"></div>                     
-    </li> 
+    <li data-row="1" data-col="4" data-sizex="4" data-sizey="1">
+      <div data-id="verbinski" data-view="Verbinski"></div>
+    </li>
+    <li data-row="1" data-col="1" data-sizex="2" data-sizey="1">
+       <div data-id="mta" data-view="Mta"></div>
+    </li>
+    <li data-row="1" data-col="1" data-sizex="2" data-sizey="1">
+      <div data-view="Clock"></div>
+      <i class="icon-background"></i>
+    </li>
+<!--     <li data-row="2" data-col="1" data-sizex="1" data-sizey="2">
+      <div data-id="twitter_mentions" data-view="Comments"
+            style="background-color:#ff9618;"
+            data-moreinfo="Tweets from @DUMBOFoodTrucks">
+      </div>
+      <i class="icon-twitter icon-background"></i>
+    </li> -->
   </ul>
 </div>
