--- a/dashboards/verbinski.erb
+++ b/dashboards/verbinski.erb
@@ -9,10 +9,16 @@
     <li data-row="1" data-col="1" data-sizex="2" data-sizey="1">
        <div data-id="mta" data-view="Mta"></div>
     </li>
-    <li data-row="1" data-col="1" data-sizex="2" data-sizey="1">
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-view="Clock"></div>
       <i class="icon-background"></i>
     </li>
+
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-view="Trash"></div>
+      <i class="icon-background icon-trash"></i>
+    </li>
+
 <!--     <li data-row="2" data-col="1" data-sizex="1" data-sizey="2">
       <div data-id="twitter_mentions" data-view="Comments"
             style="background-color:#ff9618;"
