--- a/widgets/trash/trash.scss
+++ b/widgets/trash/trash.scss
@@ -1,12 +1,12 @@
 // ----------------------------------------------------------------------------
 // Sass declarations
 // ----------------------------------------------------------------------------
-$background-color:  #938172;
+$background-color:  #541F14;
 
 // ----------------------------------------------------------------------------
 // Widget-clock styles
 // ----------------------------------------------------------------------------
-.widget-clock {
+.widget-trash {
 
   background-color: $background-color;
 
