--- a/widgets/mta/mta.scss
+++ b/widgets/mta/mta.scss
@@ -1,7 +1,7 @@
 // ----------------------------------------------------------------------------
 // Sass declarations
 // ----------------------------------------------------------------------------
-$background-color:  #FF9D00;
+$background-color:  #CC9E61;
 $text-color: #FFFDA3;
 // ----------------------------------------------------------------------------
 // Widget-text styles
