--- a/dashboards/verbinski.erb
+++ b/dashboards/verbinski.erb
@@ -8,10 +8,11 @@
     </li>
     <li data-row="1" data-col="1" data-sizex="2" data-sizey="1">
        <div data-id="mta" data-view="Mta"></div>
+       <i class="icon-background icon-code-fork"></i>
     </li>
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-view="Clock"></div>
-      <i class="icon-background"></i>
+      <i class="icon-background icon-time"></i>
     </li>
 
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
