icon height fix

--- a/widgets/verbinski/verbinski.scss
+++ b/widgets/verbinski/verbinski.scss
@@ -90,6 +90,7 @@ $hot: #ff5131; // 25 and above
 
           .weather-icon-inline {
             max-width: 50px;
+            max-height: 50px;
             margin: -5px;
           }
           .weather-icon-inline.large {
