--- a/dashboards/308.erb
+++ b/dashboards/308.erb
@@ -4,7 +4,7 @@
 <div class="gridster">
   <ul>
     <li data-row="1" data-col="4" data-sizex="4" data-sizey="1">
-      <div data-id="verbinski" data-view="Verbinski"></div>
+      <div data-id="forecast" data-view="Forecast"></div>
     </li>
     <li data-row="1" data-col="1" data-sizex="2" data-sizey="1">
        <div data-id="mta" data-view="Mta"></div>
