--- a/widgets/forecast/forecast.scss
+++ b/widgets/forecast/forecast.scss
@@ -24,9 +24,9 @@ $hot: #ff5131; // 25 and above
 
 
 // ----------------------------------------------------------------------------
-// Widget-verbinski styles
+// Widget-forecast styles
 // ----------------------------------------------------------------------------
-.widget-verbinski {
+.widget-forecast {
 
   .cold5 { background-color: $cold5; }
   .cold4 { background-color: $cold4; }
